changed retry to index

--- a/Rockpaperscissors.html
+++ b/Rockpaperscissors.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="RockPaperScissors.css" />
   </head>
   <body>
-    <nav><span class="RockPaperScissors">RockPaperScissors</span>  <a href="retry.html"> <span class="TicTacToe">TicTacToe</span></a></nav>
+    <nav><span class="RockPaperScissors">RockPaperScissors</span>  <a href="index.html"> <span class="TicTacToe">TicTacToe</span></a></nav>
 
     <div class="container"></div>
     <div class="container">
