back to original

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="title">
       <a href="Rockpaperscissors.html"
-        ><span class="RockPaperScissors">PaperScissors</span></a
+        ><span class="RockPaperScissors">RockPaperScissors</span></a
       ><span class="TicTacToe">TicTacToe</span>
     </div>
     <div class="mcc"><div class="tell"></div>
